# storychain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deepseek-r1:32b  entrypoint.sh  setup.sh  story.md  template.yaml
artifacts/: premise.yaml
scripts/: deploy_vast.sh  story_to_markdown.sh
src/: artifacts.rs  lib.rs  main.rs  tests.rs
tests/: integration_test.rs
