[package]
name = "storychain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An autonomous story generation system with branching narratives"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
