[package]
name = "storychain"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An autonomous story generation system with branching narratives"

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0.71"
regex = "1.8"
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"

[dev-dependencies]
tempfile = "3.5"
